MiniRubyParser.py
# Generated from MiniRuby.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniRubyParser ( Parser ):

    grammarFileName = "MiniRuby.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "'='", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'!'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PUTS", "GETS", "IF", "ELSE", 
                      "END", "WHILE", "DO", "OR", "AND", "NOT", "EQ", "NEQ", 
                      "LT", "LE", "GT", "GE", "PLUS", "MINUS", "MUL", "DIV", 
                      "ID", "NUMBER", "STRING", "NEWLINE", "WS", "LINE_COMMENT" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_simpleStmt = 2
    RULE_printStmt = 3
    RULE_assignStmt = 4
    RULE_ifStmt = 5
    RULE_elsePart = 6
    RULE_whileStmt = 7
    RULE_exprList = 8
    RULE_expr = 9
    RULE_orExpr = 10
    RULE_andExpr = 11
    RULE_eqExpr = 12
    RULE_relExpr = 13
    RULE_addExpr = 14
    RULE_mulExpr = 15
    RULE_unaryExpr = 16
    RULE_factor = 17

    ruleNames =  [ "prog", "stmt", "simpleStmt", "printStmt", "assignStmt", 
                   "ifStmt", "elsePart", "whileStmt", "exprList", "expr", 
                   "orExpr", "andExpr", "eqExpr", "relExpr", "addExpr", 
                   "mulExpr", "unaryExpr", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    PUTS=6
    GETS=7
    IF=8
    ELSE=9
    END=10
    WHILE=11
    DO=12
    OR=13
    AND=14
    NOT=15
    EQ=16
    NEQ=17
    LT=18
    LE=19
    GT=20
    GE=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    ID=26
    NUMBER=27
    STRING=28
    NEWLINE=29
    WS=30
    LINE_COMMENT=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniRubyParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.NEWLINE)
            else:
                return self.getToken(MiniRubyParser.NEWLINE, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = MiniRubyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67111232) != 0):
                self.state = 36
                self.stmt()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1 or _la==29:
                    self.state = 37
                    _la = self._input.LA(1)
                    if not(_la==1 or _la==29):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(MiniRubyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStmt(self):
            return self.getTypedRuleContext(MiniRubyParser.SimpleStmtContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.NEWLINE)
            else:
                return self.getToken(MiniRubyParser.NEWLINE, i)

        def ifStmt(self):
            return self.getTypedRuleContext(MiniRubyParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(MiniRubyParser.WhileStmtContext,0)


        def getRuleIndex(self):
            return MiniRubyParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = MiniRubyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.simpleStmt()
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        _la = self._input.LA(1)
                        if not(_la==1 or _la==29):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 56
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.ifStmt()
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 58
                        _la = self._input.LA(1)
                        if not(_la==1 or _la==29):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 63
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.whileStmt()
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 65
                        _la = self._input.LA(1)
                        if not(_la==1 or _la==29):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 70
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printStmt(self):
            return self.getTypedRuleContext(MiniRubyParser.PrintStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(MiniRubyParser.AssignStmtContext,0)


        def getRuleIndex(self):
            return MiniRubyParser.RULE_simpleStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStmt" ):
                listener.enterSimpleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStmt" ):
                listener.exitSimpleStmt(self)




    def simpleStmt(self):

        localctx = MiniRubyParser.SimpleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simpleStmt)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.printStmt()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.assignStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUTS(self):
            return self.getToken(MiniRubyParser.PUTS, 0)

        def exprList(self):
            return self.getTypedRuleContext(MiniRubyParser.ExprListContext,0)


        def getRuleIndex(self):
            return MiniRubyParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = MiniRubyParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MiniRubyParser.PUTS)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 78
                self.match(MiniRubyParser.T__1)


            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 81
                self.exprList()


            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 84
                self.match(MiniRubyParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniRubyParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniRubyParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniRubyParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)




    def assignStmt(self):

        localctx = MiniRubyParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MiniRubyParser.ID)
            self.state = 88
            self.match(MiniRubyParser.T__3)
            self.state = 89
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniRubyParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniRubyParser.ExprContext,0)


        def END(self):
            return self.getToken(MiniRubyParser.END, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.StmtContext,i)


        def elsePart(self):
            return self.getTypedRuleContext(MiniRubyParser.ElsePartContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.NEWLINE)
            else:
                return self.getToken(MiniRubyParser.NEWLINE, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = MiniRubyParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(MiniRubyParser.IF)
            self.state = 92
            self.expr()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==29:
                self.state = 93
                _la = self._input.LA(1)
                if not(_la==1 or _la==29):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67111232) != 0):
                self.state = 99
                self.stmt()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 105
                self.elsePart()


            self.state = 108
            self.match(MiniRubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsePartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(MiniRubyParser.ELSE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.NEWLINE)
            else:
                return self.getToken(MiniRubyParser.NEWLINE, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_elsePart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsePart" ):
                listener.enterElsePart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsePart" ):
                listener.exitElsePart(self)




    def elsePart(self):

        localctx = MiniRubyParser.ElsePartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elsePart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MiniRubyParser.ELSE)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==29:
                self.state = 111
                _la = self._input.LA(1)
                if not(_la==1 or _la==29):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67111232) != 0):
                self.state = 117
                self.stmt()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MiniRubyParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniRubyParser.ExprContext,0)


        def END(self):
            return self.getToken(MiniRubyParser.END, 0)

        def DO(self):
            return self.getToken(MiniRubyParser.DO, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.NEWLINE)
            else:
                return self.getToken(MiniRubyParser.NEWLINE, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)




    def whileStmt(self):

        localctx = MiniRubyParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(MiniRubyParser.WHILE)
            self.state = 124
            self.expr()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 125
                self.match(MiniRubyParser.DO)


            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==29:
                self.state = 128
                _la = self._input.LA(1)
                if not(_la==1 or _la==29):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67111232) != 0):
                self.state = 134
                self.stmt()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(MiniRubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.ExprContext,i)


        def getRuleIndex(self):
            return MiniRubyParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)




    def exprList(self):

        localctx = MiniRubyParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.expr()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 143
                self.match(MiniRubyParser.T__4)
                self.state = 144
                self.expr()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(MiniRubyParser.OrExprContext,0)


        def getRuleIndex(self):
            return MiniRubyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = MiniRubyParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.AndExprContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.OR)
            else:
                return self.getToken(MiniRubyParser.OR, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)




    def orExpr(self):

        localctx = MiniRubyParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.andExpr()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 153
                self.match(MiniRubyParser.OR)
                self.state = 154
                self.andExpr()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eqExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.EqExprContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.EqExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.AND)
            else:
                return self.getToken(MiniRubyParser.AND, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)




    def andExpr(self):

        localctx = MiniRubyParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.eqExpr()
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 161
                self.match(MiniRubyParser.AND)
                self.state = 162
                self.eqExpr()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.RelExprContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.RelExprContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.EQ)
            else:
                return self.getToken(MiniRubyParser.EQ, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.NEQ)
            else:
                return self.getToken(MiniRubyParser.NEQ, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_eqExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqExpr" ):
                listener.enterEqExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqExpr" ):
                listener.exitEqExpr(self)




    def eqExpr(self):

        localctx = MiniRubyParser.EqExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_eqExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.relExpr()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==17:
                self.state = 169
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 170
                self.relExpr()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.AddExprContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.AddExprContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.LT)
            else:
                return self.getToken(MiniRubyParser.LT, i)

        def LE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.LE)
            else:
                return self.getToken(MiniRubyParser.LE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.GT)
            else:
                return self.getToken(MiniRubyParser.GT, i)

        def GE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRubyParser.GE)
            else:
                return self.getToken(MiniRubyParser.GE, i)

        def getRuleIndex(self):
            return MiniRubyParser.RULE_relExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelExpr" ):
                listener.enterRelExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelExpr" ):
                listener.exitRelExpr(self)




    def relExpr(self):

        localctx = MiniRubyParser.RelExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_relExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.addExpr()
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0):
                self.state = 177
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 178
                self.addExpr()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRubyParser.MulExprContext)
            else:
                return self.getTypedRuleContext(MiniRubyParser.MulExprContext,i)

